--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8253,7 +8253,7 @@ body.is-preload .items.onload-fade-in > * > .inner {
 
 .tag {
   display: inline-block;
-  background-color: #f0f0f0;
+  background-color: transparent;
   color: #333;
   padding: 5px 10px;
   border-radius: 15px;
