--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8637,7 +8637,7 @@ body.is-preload .items.onload-fade-in > * > .inner {
   top: 0;
   width: 100%;
   z-index: 1000;
-  background-color: #ffffff;
+  background-color: #000000;
   transition: top 0.3s ease-in-out;
   padding: 5px; /* 内边距 */
 }
