--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8639,14 +8639,14 @@ body.is-preload .items.onload-fade-in > * > .inner {
   width: 100%;
   background-color: #000000; /* 背景色 */
   color: #ffffff;
-  padding: 10px;
+  padding: 15px 15px 20px 15px;
   z-index: 1000; /* 确保页眉在最上层 */
 }
 
 /* 页眉内的导航样式 */
 .header nav a {
   color: #000000;
-  margin: 20px 0 0 20px;
+  margin: 10px 15px;
   text-decoration: none;
 }
 
