--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1821,3 +1821,22 @@ body.homepage {
     }
   }
 }
+
+/* progress */
+.progress-bar {
+  width: 100%;
+  background-color: #e0e0e0;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.progress {
+  height: 20px;
+  background-color: #ef8376; /* 蓝色进度条 */
+  width: 80%; /* 技能水平 80% */
+  text-align: right;
+  padding-right: 5px;
+  line-height: 20px;
+  color: white;
+  font-size: 14px;
+  border-radius: 10px 0 0 10px;
+}
