--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1903,6 +1903,11 @@ footer {
   width: 100%;
 }
 
+.image.small {
+  display: block;
+  width: 20%;
+}
+
 .image.featured {
   display: block;
   width: 100%;
