--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2725,7 +2725,8 @@ body.homepage.is-preload #header:after {
 
 .carousel article {
   display: inline-block;
-  width: 18em;
+  height: 40em;
+  width: auto;
   background: #fff;
   text-align: center;
   padding: 0 1em 3em 1em;
