--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2714,19 +2714,9 @@ body.homepage.is-preload #header:after {
   padding: 0 2em 0 2em;
 }
 
-.carousel .reel img {
-  position: relative;
-  left: -1em;
-  top: 0;
-  height: 20em;
-  margin-right: -2em;
-  margin-bottom: 3em;
-}
-
 .carousel article {
   display: inline-block;
-  height: 20em;
-  width: auto;
+  width: 18em;
   background: #fff;
   text-align: center;
   padding: 0 1em 3em 1em;
