--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2870,6 +2870,23 @@ body.homepage.is-preload #header:after {
   }
 }
 
+/* Video */
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 /* Mobile */
 
 #navPanel,
