--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2873,10 +2873,12 @@ body.homepage.is-preload #header:after {
 /* Video */
 .video-container {
   position: relative;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  width: 80%; /* 设置宽度，适配不同设备 */
+  max-width: 800px; /* 限制最大宽度，防止过大 */
+  margin: 0 auto; /* 居中对齐 */
+  padding-bottom: 45%; /* 保持16:9比例 */
   height: 0;
   overflow: hidden;
-  max-width: 100%;
 }
 
 .video-container iframe {
