--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,7 +177,7 @@ body {
   color: #5b5b5b;
   font-size: 15pt;
   line-height: 1.85em;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Aptos", "Source Sans Pro", sans-serif;
   font-weight: 300;
 }
 
