--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,7 +199,7 @@ textarea,
 select {
   font-size: 15pt;
   line-height: 1.85em;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Aptos", "Source Sans Pro", sans-serif;
   font-weight: 300;
 }
 
