--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,7 +177,7 @@ body {
   color: #5b5b5b;
   font-size: 15pt;
   line-height: 1.85em;
-  font-family: "Roboto", "Source Sans Pro", sans-serif;
+  font-family: "Roboto", "Source Sans Pro", "Ma Shan Zheng", sans-serif;
   font-weight: 300;
 }
 
@@ -199,7 +199,7 @@ textarea,
 select {
   font-size: 15pt;
   line-height: 1.85em;
-  font-family: "Roboto", "Source Sans Pro", sans-serif;
+  font-family: "Roboto", "Source Sans Pro", "Ma Shan Zheng", sans-serif;
   font-weight: 300;
 }
 
