--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,7 @@
 @import "libs/breakpoints";
 @import "libs/html-grid";
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 @import url("fontawesome-all.min.css");
 
 /*
