--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -506,6 +506,11 @@ footer {
     margin: 0 2em 2em 0;
   }
 
+  &.left {
+    float: right;
+    margin: 0 2em 2em 0;
+  }
+
   &.centered {
     display: block;
     margin: 0 0 2em 0;
