--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1916,6 +1916,11 @@ footer {
   margin: 0 2em 2em 0;
 }
 
+.image.right {
+  float: right;
+  margin: 0 0 2em 2em;
+}
+
 .image.centered {
   display: block;
   margin: 0 0 2em 0;
