--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -508,7 +508,7 @@ footer {
 
   &.right {
     float: right;
-    margin: 0 2em 2em 0;
+    margin: 0 0 2em 2em;
   }
 
   &.centered {
@@ -1513,7 +1513,7 @@ body.homepage {
     }
 
     &.right {
-      margin: 0 1em 1em 0;
+      margin: 0 0 1em 1em;
     }
 
     &.centered {
