--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,7 +6,7 @@
 @import "libs/html-grid";
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Ma+Shan+Zheng&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Ma+Shan+Zheng&family=EB Garamond:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 @import url("fontawesome-all.min.css");
 
 /*
@@ -215,7 +215,7 @@ body {
   color: #5b5b5b;
   font-size: 15pt;
   line-height: 1.85em;
-  font-family: "Montserrat", "Source Sans Pro", "Ma Shan Zheng", sans-serif;
+  font-family: "EB Garamond", "Source Sans Pro", "Ma Shan Zheng", sans-serif;
   font-weight: 300;
 
   // Stops initial animations until page loads.
@@ -234,7 +234,7 @@ textarea,
 select {
   font-size: 15pt;
   line-height: 1.85em;
-  font-family: "Montserrat", "Source Sans Pro", "Ma Shan Zheng", sans-serif;
+  font-family: "EB Garamond", "Source Sans Pro", "Ma Shan Zheng", sans-serif;
   font-weight: 300;
 }
 
