--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3431,3 +3431,11 @@ body.homepage.is-preload #header:after {
   font-size: 0.8em;
   margin-left: 8px;
 }
+
+.custom-title {
+  font-family: "EB Garamond", "Source Sans Pro", "Ma Shan Zheng", sans-serif;
+  font-size: 32px; /* 让它更醒目 */
+  font-style: italic;
+  font-weight: 700;
+  z-index: 1;
+}
