--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3413,7 +3413,7 @@ body.homepage.is-preload #header:after {
 
 /* note card */
 .note-card {
-  background: #f9f9f9;
+  background: white;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
   margin-bottom: 1.5rem;
