--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -242,11 +242,21 @@ select {
   font-weight: 300;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
+h1 {
+  font-weight: 700;
+}
+h2 {
+  font-weight: 600;
+}
+h3 {
+  font-weight: 550;
+}
+h4 {
+  font-weight: 500;
+}
+h5 {
+  font-weight: 450;
+}
 h6 {
   font-weight: 400;
   color: #483949;
