--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,12 +16,26 @@ span,
 applet,
 object,
 iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
+h1 {
+  font-weight: 700;
+}
+h2 {
+  font-weight: 600;
+}
+h3 {
+  font-weight: 550;
+}
+h4 {
+  font-weight: 500;
+}
+h5 {
+  font-weight: 450;
+}
+h6 {
+  font-weight: 400;
+  color: #483949;
+  line-height: 1.25em;
+}
 p,
 blockquote,
 pre,
@@ -43,7 +57,9 @@ s,
 samp,
 small,
 strike,
-strong,
+strong {
+  font-weight: 600;
+}
 sub,
 sup,
 tt,
