--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2185,13 +2185,14 @@ button,
 .button {
   position: relative;
   display: inline-block;
-  background: #df7366;
-  color: #fff;
+  background: #fff;
+  color: #483949;
+  font-size: 0.9em;
   text-align: center;
-  border-radius: 0.5em;
+  border-radius: 16px;
   text-decoration: none;
-  padding: 0.65em 3em 0.65em 3em;
-  border: 0;
+  padding: 4px 12px;
+  border: 1px solid #ddd;
   cursor: pointer;
   outline: 0;
   font-weight: 300;
