--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2220,6 +2220,7 @@ input[type="submit"].alt,
 input[type="reset"].alt,
 button.alt,
 .button.alt {
+  color: #fff;
   background: #2b252c;
 }
 
@@ -2229,14 +2230,6 @@ input[type="reset"].alt:hover,
 button.alt:hover,
 .button.alt:hover {
   background: #3b353c;
-}
-
-/* 小号按钮变体 */
-.button.small {
-  padding: 0.25em 1em; /* 减小内边距 */
-  font-size: 0.8em; /* 缩小字号 */
-  letter-spacing: 0.05em; /* 调整字间距 */
-  border-width: 1px; /* 细边框 */
 }
 
 /* Post */
