--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3834,7 +3834,7 @@ body.homepage.is-preload #header:after {
   padding-top: 56.25%; /* 16:9 Aspect Ratio */
   border-radius: var(--radius-md);
   overflow: hidden;
-  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: var(--shadow);
 }
 
 .video-wrapper img {
